Remove inexistent functions from examples and export necessary functions in NAMESPACE file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,9 @@ export(
        "getRidge",
        "identifyMajorPeaks",
        "widthEstimationCWT",
+       "plotwidthEstimation",
        "baselineCorrectionCWT",
 	   "plotRidgeList",
-	   "WhittakerSmooth"
+	   "WhittakerSmooth",
+	   "localMaximum"
        )
